--- a/solutions/ch16_02.md
+++ b/solutions/ch16_02.md
@@ -7,70 +7,78 @@ title:  "Chapter 16: Solutions"
 
 ### Exercise 2: An HTML Template
 
-Output:
+Complete the code in `grocery.go` and `list.html` below.
+
+When a browser visits `http://localhost:8080/fruit`, your app should respond with this HTML (the spacing doesn't have to match exactly):
 
 ``` text
 <html>
   <ul>
-      <li>apples</li>
-      <li>oranges</li>
-      <li>pears</li>    
+    <li>apples</li>
+    <li>oranges</li>
+    <li>pears</li>
   </ul>
 </html>
 ```
 
+And when a browser visits `http://localhost:8080/meat`, your app should respond with this HTML:
+
 ```
 <html>
   <ul>
-      <li>chicken</li>
-      <li>beef</li>
-      <li>lamb</li>
+    <li>chicken</li>
+    <li>beef</li>
+    <li>lamb</li>
   </ul>
 </html>
 ```
 
 ### Solution
 
+`grocery.go`
+
 {% highlight go %}
 package main
 
 import (
-  "html/template"
-  "log"
-  "net/http"
+	"html/template"
+	"log"
+	"net/http"
 )
 
 func check(err error) {
-  if err != nil {
-    log.Fatal(err)
-  }
+	if err != nil {
+		log.Fatal(err)
+	}
 }
 
 func writeList(writer http.ResponseWriter, list []string) {
-  html, err := template.ParseFiles("list.html")
-  check(err)
-  err = html.Execute(writer, list)
+	html, err := template.ParseFiles("list.html")
+	check(err)
+	err = html.Execute(writer, list)
+	check(err)
 }
 
 func fruitHandler(writer http.ResponseWriter, request *http.Request) {
-  writeList(writer, []string{"apples", "oranges", "pears"})
+	writeList(writer, []string{"apples", "oranges", "pears"})
 }
 
 func meatHandler(writer http.ResponseWriter, request *http.Request) {
-  writeList(writer, []string{"chicken", "beef", "lamb"})
+	writeList(writer, []string{"chicken", "beef", "lamb"})
 }
 
 func main() {
-  http.HandleFunc("/fruit", fruitHandler)
-  http.HandleFunc("/meat", meatHandler)
-  err := http.ListenAndServe("localhost:8080", nil)
-  log.Fatal(err)
+	http.HandleFunc("/fruit", fruitHandler)
+	http.HandleFunc("/meat", meatHandler)
+	err := http.ListenAndServe("localhost:8080", nil)
+	log.Fatal(err)
 }
 {% endhighlight %}
 
 `list.html`
 
 {% highlight html %}
+{% raw %}
 <html>
   <ul>
     {{range .}}
@@ -78,4 +86,5 @@ func main() {
     {{end}}
   </ul>
 </html>
+{% endraw %}
 {% endhighlight %}
