add missing link to solution

--- a/exercises/ch02.md
+++ b/exercises/ch02.md
@@ -183,3 +183,5 @@ func main() {
 	fmt.Println("Sum is", sum)
 }
 {% endhighlight %}
+
+When you're ready, have a look at [the solution](/solutions/ch02_03.html)
